# delivery_user_service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh
migrations/2023-02-16-081925_create_users_couriers/: down.sql  up.sql
migrations/2023-03-07-103322_triggers_for_date_generation/: down.sql  up.sql
src/: lib.rs  main.rs
src/api/: v1.rs
src/db/: db_utils.rs  mod.rs  schema.rs
src/handlers/: authentication.rs
src/middleware/: admin_or_owner_middleware.rs  jwt_middleware.rs  mod.rs  permission_middleware.rs
src/models/: token.rs  users.rs
src/repository/: users.rs
src/services/: authentication.rs  users.rs
src/utils/: config.rs  db_utils.rs  errors.rs
