[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix = "0.13.0"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "chrono", "r2d2", "uuid"] }
dotenv = "0.15.0"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
jsonwebtoken = "8.2.0"
sha3 = "0.10.6"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive", "phone"] }